# gtk-hello-world

./: CMakeLists.txt  README.md
src/: main.c
